--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="box-container">
-            <div class="box bg-green">
+            <div class="box bg-green disappear">
                 <div class="welcome-note">
                     <h1>Welcome to VGG</h1>
                     <p>Please fill the form to help us know you better</p>
